# embedded-tactical-wearable

./: CMakeLists.txt  README.md  prj.conf
src/: main.c  tatico_button.c  tatico_button.h  tatico_events.c  tatico_events.h  tatico_settings.c  tatico_settings.h  tatico_shell.c  tatico_shell.h
tests/simulation/: CMakeLists.txt  prj.conf  testcase.yaml
tests/simulation/src/: main.c
